[tool.poetry]
name = "swd-gpt-demo"
version = "0.1.0"
description = ""
authors = ["jp"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
streamlit = "^1.20.0"
openai = "^0.27.2"
langchain = "^0.0.162"
tiktoken = "^0.3.2"
streamlit-scrollable-textbox = "^0.0.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"